--- a/Ch2/Ch2.vcxproj
+++ b/Ch2/Ch2.vcxproj
@@ -72,13 +72,13 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>C:\_CHCH\ExternalFiles\SDL\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\_CHCH\ExternalFiles\SDL\lib\win\x86;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\_CHCH\Externals\SDL\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\_CHCH\Externals\SDL\lib\win\x86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>C:\_CHCH\ExternalFiles\SDL\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\_CHCH\ExternalFiles\SDL\lib\win\x86;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\_CHCH\Externals\SDL\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\_CHCH\Externals\SDL\lib\win\x86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
@@ -143,7 +143,21 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Actor.cpp" />
+    <ClCompile Include="BGSpriteComponent.cpp" />
+    <ClCompile Include="Component.cpp" />
+    <ClCompile Include="Game.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Ship.cpp" />
+    <ClCompile Include="SpriteComponent.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Actor.h" />
+    <ClInclude Include="BGSpriteComponent.h" />
+    <ClInclude Include="Component.h" />
+    <ClInclude Include="Game.h" />
+    <ClInclude Include="Ship.h" />
+    <ClInclude Include="SpriteComponent.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
